--- a/free-nodes/page-23.htm
+++ b/free-nodes/page-23.htm
@@ -93,6 +93,20 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2024-03-04">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2024-3-4-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/27ea0bf4af43099050c87da981096f79.webp" alt="3月4日21.7M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2024-3-4-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">3月4日21.7M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了韩国、欧洲、新加坡、美国、香港、日本、加拿大等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2024-03-03">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2024-3-3-free-v2ray-subscribe.htm" class="xcblog-blog-url">
@@ -173,16 +187,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-6-27-free-node-subscribe.htm" title="6月27日→20.2M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址">6月27日→20.2M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-12-free-ssr-node.htm" title="7月12日→20.3M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址">7月12日→20.3M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-1-free-v2ray-subscribe.htm" title="8月1日→19M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址">8月1日→19M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-4-free-clash.htm" title="9月4日→21.2M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">9月4日→21.2M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-24-clash-windows.htm" title="4月24日→22.7M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接">4月24日→22.7M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-22-free-node-subscribe.htm" title="6月22日→21.6M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址">6月22日→21.6M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-27-free-high-speed-nodes.htm" title="9月27日→21.3M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">9月27日→21.3M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-29-free-node-subscribe-links.htm" title="6月29日→22.4M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址">6月29日→22.4M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-17-shadowrocket-node.htm" title="5月17日→19M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址">5月17日→19M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-12-free-ssr-subscribe.htm" title="8月12日→19.7M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址">8月12日→19.7M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-9-29-node-share-links.htm" title="9月29日→20.8M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址">9月29日→20.8M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-11-clash-node-daily-updates.htm" title="9月11日→22.6M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址">9月11日→22.6M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-14-free-clash.htm" title="6月14日→21.6M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址">6月14日→21.6M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-2-clash-node.htm" title="4月2日→18M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接">4月2日→18M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-15-free-clash-subscribe.htm" title="8月15日→18M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址">8月15日→18M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-14-free-node-subscribe-links.htm" title="10月14日→18.1M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址，便宜机场推荐">10月14日→18.1M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-20-free-high-speed-nodes.htm" title="3月20日22.2M/S|Shadowrocket/V2ray/Clash/SSR免费节点每天更新订阅链接">3月20日22.2M/S|Shadowrocket/V2ray/Clash/SSR免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-8-free-node-subscribe-links.htm" title="6月8日→19.9M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址">6月8日→19.9M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-18-free-clash.htm" title="6月18日→19.9M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址">6月18日→19.9M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -194,7 +208,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">16</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
+                <h4><span class="badge" style="float: right;">17</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2024-09/" title="2024-09 归档">2024-09</a></h4>
