--- a/index.html
+++ b/index.html
@@ -120,6 +120,20 @@
             	<h2 class="text-center" style="margin-block: 1rem;">最近更新文章</h2>
                 <!-- welcome -->
                 <div class="xcblog-blog-list">
+                                        <div class="welcome xcblog-blog-item" data-date="2024-10-17">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2024-10-17-node-share-links.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/7fe0a3254708abdaf06a53e4d29ef007.webp" alt="10月17日→21.1M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2024-10-17-node-share-links.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">10月17日→21.1M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了日本、韩国、香港、美国、加拿大、欧洲、新加坡等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                         <div class="welcome xcblog-blog-item" data-date="2024-10-16">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2024-10-16-free-v2ray-subscribe.htm" class="xcblog-blog-url">
@@ -386,20 +400,6 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                                        <div class="welcome xcblog-blog-item" data-date="2024-09-27">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2024-9-27-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/cf4b7d70d0b73f0bfc03a06c4aff020d.webp" alt="9月27日→21.3M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2024-9-27-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">9月27日→21.3M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了新加坡、日本、韩国、加拿大、香港、欧洲、美国等地区,最高速度可达21.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
                                     </div>
                 <!-- //welcome -->
             </div>
@@ -410,16 +410,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-4-13-free-clash.htm" title="4月13日→20.9M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接">4月13日→20.9M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-15-node-share-links.htm" title="3月15日19.6M/S|Clash/V2ray/SSR/Shadowrocket免费节点每天更新订阅链接">3月15日19.6M/S|Clash/V2ray/SSR/Shadowrocket免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-5-free-ssr-subscribe.htm" title="5月5日→22.9M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址">5月5日→22.9M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-21-free-clash.htm" title="5月21日→19.9M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址">5月21日→19.9M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-29-free-node-subscribe-links.htm" title="6月29日→22.4M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址">6月29日→22.4M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-3-shadowrocket-node.htm" title="6月3日→22.6M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址">6月3日→22.6M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-19-clash-node-daily-updates.htm" title="7月19日→22.8M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址">7月19日→22.8M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-7-free-v2ray.htm" title="8月7日→18.1M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址">8月7日→18.1M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-8-19-free-subscribe-node.htm" title="8月19日→18.7M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址">8月19日→18.7M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-11-clash-node.htm" title="10月11日→19.4M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址">10月11日→19.4M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-18-free-high-speed-nodes.htm" title="4月18日→21.3M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接">4月18日→21.3M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-29-free-subscribe-node.htm" title="4月29日→23M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址">4月29日→23M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-29-node-share-links.htm" title="9月29日→20.8M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址">9月29日→20.8M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-13-free-clash.htm" title="4月13日→20.9M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接">4月13日→20.9M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-21-free-clash.htm" title="5月21日→19.9M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址">5月21日→19.9M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-29-clash-node.htm" title="3月29日→18.2M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接">3月29日→18.2M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-23-free-clash.htm" title="5月23日→22.6M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址">5月23日→22.6M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-31-free-clash-subscribe.htm" title="7月31日→22.4M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址">7月31日→22.4M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-4-node-share.htm" title="6月4日→20.5M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址">6月4日→20.5M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -431,7 +431,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">16</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
+                <h4><span class="badge" style="float: right;">17</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">29</span> <a href="/date/2024-09/" title="2024-09 归档">2024-09</a></h4>
